Android: add missing extras native methods impls and registration

This should have been done when the extras where moved to qtbase,
it went under the rug and was forgotten.

Pick-to: 6.6 6.5 6.2
Fixes: QTBUG-114971
Change-Id: Id7831a8bab8bedc1f869b9fc8bfc72acc3cca7a2
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>