src/corelib/kernel/qjnihelpers_p.h
@@ -65,8 +65,9 @@ namespace QtAndroidPrivate
     jobject classLoader();
     Q_CORE_EXPORT jint androidSdkVersion();
 
-    bool registerPermissionNatives();
-    bool registerNativeInterfaceNatives();
+    bool registerPermissionNatives(QJniEnvironment &env);
+    bool registerNativeInterfaceNatives(QJniEnvironment &env);
+    bool registerExtrasNatives(QJniEnvironment &env);
 
     Q_CORE_EXPORT void handleActivityResult(jint requestCode, jint resultCode, jobject data);
     Q_CORE_EXPORT void registerActivityResultListener(ActivityResultListener *listener);
