src/corelib/platform/android/qandroidnativeinterface.cpp
@@ -265,11 +265,11 @@ static void runPendingCppRunnables(JNIEnv */*env*/, jobject /*obj*/)
 }
 #endif
 
-bool QtAndroidPrivate::registerNativeInterfaceNatives()
+bool QtAndroidPrivate::registerNativeInterfaceNatives(QJniEnvironment &env)
 {
 #if QT_CONFIG(future) && !defined(QT_NO_QOBJECT)
-    JNINativeMethod methods = {"runPendingCppRunnables", "()V", (void *)runPendingCppRunnables};
-    return QJniEnvironment().registerNativeMethods(qtNativeClassName, &methods, 1);
+    const JNINativeMethod methods = {"runPendingCppRunnables", "()V", (void *)runPendingCppRunnables};
+    return env.registerNativeMethods(qtNativeClassName, &methods, 1);
 #else
     return true;
 #endif
